handle Paths_haskell_code_explorer issue

--- a/haskell-code-explorer.cabal
+++ b/haskell-code-explorer.cabal
@@ -55,7 +55,8 @@ library
 executable haskell-code-indexer
   main-is:             Indexer.hs
   ghc-options:        -Wall -rtsopts -O2 -funbox-strict-fields -package ghc
-  other-modules: Paths_haskell_code_explorer
+  other-modules:      Paths_haskell_code_explorer
+  autogen-modules: Paths_haskell_code_explorer
   hs-source-dirs: app
   build-depends:     IntervalMap
                    , aeson
